# OverOwned-Automated

./: App.jsx  PIECE_2_DEPLOY.md  README.md
backend/: .env.example  Dockerfile  Procfile  README.md  pyproject.toml  railway.json
backend/app/: __init__.py  config.py  db.py  main.py  models.py
backend/app/routes/: admin_debug.py  admin_debug_extra.py  admin_dk.py  admin_slate.py  health.py  players.py  pp_admin_picks_routes.py  prizepicks.py  slates.py  tracker.py  weather.py  weather_routes.py
backend/app/services/: contest_ownership.py  dk_auto_ingest.py  dk_client.py  http.py  kalshi.py  manual_slate_ingest.py  normalizer.py  notifier.py  odds_api.py  pp_admin_picks.py  prizepicks_admin.py  prizepicks_direct.py  sgo_odds.py  sgo_prizepicks.py  slate_builder.py  slate_classifier.py  slate_reader.py  tennis_venues.py  weather.py
backend/app/services/weather/: weather.py
backend/app/workers/: slate_watcher.py
backend/migrations/: 001_initial.sql  002_slate_classifier.sql  003_odds_and_prizepicks.sql  004_id_overrides_and_contest_own.sql  006_subscriptions_table.sql  007_v6_manual_slates.sql
backend/tests/: test_normalizer.py  test_piece2.py  test_slate_classifier.py
frontend/: APPJSX_PATCH.md  index.html  netlify.toml  package-lock.json  package.json
frontend/frontend/: netlify.toml
frontend/public/: slate.json
frontend/scripts/: convert.py  convert_ufc.py
frontend/src/: AccountPage.jsx  App.jsx  engine-mma.js  engine-nba.js  engine.js  main.jsx  styles.css
frontend/src/lib/: api.js  (+4 more)
lib/: supabase.js
migrations/: 005_closing_odds.sql
(+9 files in other folders)
