[project]
name = "overowned-backend"
version = "0.1.0"
description = "OverOwned DFS — ingestion services and API"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.2",
    "supabase>=2.9.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "apscheduler>=3.10.4",
    "rapidfuzz>=3.10.0",
    "python-dateutil>=2.9.0",
    "sentry-sdk[fastapi]>=2.17.0",
    "tenacity>=9.0.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
